<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>io.github.IzumiDIA</groupId>
	<artifactId>JavaWebView</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>webview.core</module>
		<module>webview.impl.windows</module>
		<module>example</module>
	</modules>
	
	<properties>
		<java.version>23</java.version>
		<author.nickname>Izumi Ryuu</author.nickname>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
			<dependency>
				<groupId>org.jetbrains</groupId>
				<artifactId>annotations</artifactId>
				<version>[26.0.1,)</version>
				<scope>compile</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<encoding>${project.build.sourceEncoding}</encoding>
						<verbose>true</verbose>
						<release>${java.version}</release>
						<enablePreview>true</enablePreview>
						<compilerArgs>
							<compilerArg>--enable-preview</compilerArg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
					<configuration>
						<archive>
							<manifestEntries>
								<Manifest-Version>1.0</Manifest-Version>
								<Build-Jdk-Spec>${java.version}</Build-Jdk-Spec>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<developers>
		<developer>
			<name>${author.nickname}</name>
			<id>IzumiDIA</id>
			<email>izumiryuu@qq.com</email>
			<roles>
				<role>Author</role>
			</roles>
		</developer>
	</developers>
</project>
